--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url("./variables.css");
 @import url("./buttons.css");
 @import url("./section.css");
+@import url("./navbar.css");
 
 * {
   margin: 0;
