--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 @import url("./section.css");
 @import url("./navbar.css");
 @import url("./header.css");
+@import url("./about.css");
 
 * {
   margin: 0;
@@ -12,6 +13,10 @@
   border: none;
   outline: none;
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
