--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 @import url("./navbar.css");
 @import url("./header.css");
 @import url("./about.css");
+@import url("./services.css");
 
 * {
   margin: 0;
