--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 @import url("./about.css");
 @import url("./services.css");
 @import url("./projects.css");
+@import url("./testimonials.css");
 
 * {
   margin: 0;
