--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 @import url("./services.css");
 @import url("./projects.css");
 @import url("./testimonials.css");
+@import url("./contact.css");
 
 * {
   margin: 0;
