--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
 @import url("./projects.css");
 @import url("./testimonials.css");
 @import url("./contact.css");
+@import url("./footer.css");
 
 * {
   margin: 0;
