--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 @import url("./testimonials.css");
 @import url("./contact.css");
 @import url("./footer.css");
+@import url("./media.css");
 
 * {
   margin: 0;
