--- a/styles/media.css
+++ b/styles/media.css
@@ -93,9 +93,88 @@
     }
   }
 
-  /* header,
-  section,
-  footer {
+  header {
+    height: 115vh;
+  }
+
+  .header__content {
+    width: var(--container-width-small);
+    padding-bottom: 3rem;
+  }
+
+  .header__socials {
     display: none;
-  } */
+  }
+
+  .header__image {
+    width: 50vw;
+    aspect-ratio: 4/5;
+  }
+
+  .about__container {
+    grid-template-columns: 1fr;
+  }
+
+  .about__image {
+    display: none;
+  }
+
+  .about__cards {
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+
+  .services__container {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
+  .services__right {
+    padding: 0;
+    border: none;
+  }
+
+  .services__right h3 {
+    margin-bottom: 0.6rem;
+  }
+
+  .projects__categories {
+    gap: 0.7rem;
+  }
+
+  .projects__categories li {
+    padding: 0.8rem 1rem;
+  }
+
+  .projects__container {
+    gap: 1rem;
+  }
+
+  .swiper {
+    width: var(--container-width-small);
+  }
+
+  .swiper-wrapper {
+    padding-bottom: 3rem;
+  }
+
+  .swiper-slide {
+    padding: 1.5rem;
+  }
+
+  .contact__container {
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+
+  .contact__list {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .footer__menu {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.6rem;
+  }
 }
