--- a/styles/contact.css
+++ b/styles/contact.css
@@ -37,6 +37,15 @@ section.contact#contact {
   gap: 1.5rem;
 }
 
+.contact__form .button {
+  background-color: var(--color-gray-100);
+  color: var(--color-gray-900);
+}
+.contact__form .button:hover {
+  background-color: var(--color-gray-900);
+  color: var(--color-gray-100);
+}
+
 .contact__form input,
 .contact__form textarea {
   padding: 1rem;
