--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@
 @import url("./contact.css");
 @import url("./footer.css");
 @import url("./media.css");
+@import url("./dark-theme.css");
 
 * {
   margin: 0;
